# PISR-NSGA-II

./: .env  .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  fix_hill_climbing.py  fix_pde.py  main.cpp  paper_text.txt  pi_nsga2  pinn_baseline.py  plot_extra_report_figures.py  plot_pareto.py  plot_solutions.py  run_pipeline.sh  setup_cuda.sh  stats_analysis.py  tuning_results.csv
include/: common.hpp  dimensions.hpp  koza_bnf.hpp  nsga2.hpp  pde_problems.hpp  pi_solver.hpp  tree_node.hpp
report/: generate_formulas_table.py  generate_report.py  results.aux
results/: Airy_1D_pi_gn_convergence.csv  Airy_1D_pi_gn_pareto.csv  Airy_1D_pinn_pareto.csv  Airy_2D_pi_gn_convergence.csv  Airy_2D_pi_gn_pareto.csv  Airy_2D_pinn_pareto.csv  Allen-Cahn_2D_pi_gn_convergence.csv  Allen-Cahn_2D_pi_gn_pareto.csv  Allen-Cahn_2D_pinn_pareto.csv  Bratu_2D_pi_gn_convergence.csv  Bratu_2D_pi_gn_pareto.csv  Bratu_2D_pinn_pareto.csv  Duffing_1D_pi_gn_convergence.csv  Duffing_1D_pi_gn_pareto.csv  Duffing_1D_pinn_pareto.csv  Duffing_2D_pi_gn_convergence.csv  Duffing_2D_pi_gn_pareto.csv  Duffing_2D_pinn_pareto.csv  Fisher_1D_pi_gn_convergence.csv  Fisher_1D_pi_gn_pareto.csv  Fisher_1D_pinn_pareto.csv  Fisher_2D_pi_gn_convergence.csv  Fisher_2D_pi_gn_pareto.csv  Fisher_2D_pinn_pareto.csv  Ginzburg-Landau_1D_pi_gn_convergence.csv  Ginzburg-Landau_1D_pi_gn_pareto.csv  HarmonicOscillator_1D_pi_gn_convergence.csv  HarmonicOscillator_1D_pi_gn_pareto.csv  HarmonicOscillator_1D_pinn_pareto.csv  HarmonicOscillator_2D_pi_gn_convergence.csv  HarmonicOscillator_2D_pi_gn_pareto.csv  HarmonicOscillator_2D_pinn_pareto.csv  Helmholtz_1D_pi_gn_convergence.csv  Helmholtz_1D_pi_gn_pareto.csv  Helmholtz_1D_pinn_pareto.csv  Helmholtz_2D_pi_gn_convergence.csv  Helmholtz_2D_pi_gn_pareto.csv  Helmholtz_2D_pinn_pareto.csv  Lane-Emden_1D_pi_gn_pareto.csv  Lane-Emden_1D_pinn_pareto.csv  (+93 more)
results/run_0/: Airy_1D_pi_gn_convergence.csv  Airy_1D_pi_gn_pareto.csv  Airy_2D_pi_gn_convergence.csv  Airy_2D_pi_gn_pareto.csv  Allen-Cahn_2D_pi_gn_pareto.csv  Bratu_2D_pi_gn_pareto.csv  Duffing_1D_pi_gn_convergence.csv  Duffing_1D_pi_gn_pareto.csv  Duffing_2D_pi_gn_convergence.csv  Duffing_2D_pi_gn_pareto.csv  Fisher_1D_pi_gn_convergence.csv  Fisher_1D_pi_gn_pareto.csv  Fisher_2D_pi_gn_pareto.csv  (+36 more)
src/: koza.cpp  koza_bnf.cpp  numerical_solver.cpp  pde_problems.cpp  pi-nsga-II.cpp  pi_solver.cpp  tree_node.cpp
(+1303 files in other folders)
